# git-practice

./: README.md  cli_app.py  main.py  pyproject.toml
streamlit_ui/: main.py
